force-app/main/default/objects/Case/fields/Case_Age_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_in_Minutes__c</fullName>
    <formula>IF( IsClosed , (ClosedDate - CreatedDate) *1440, (NOW() - CreatedDate ) *1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age in Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>