force-app/main/default/objects/Case/fields/CoIT_Agent__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Asesor)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>