force-app/main/default/objects/Case/fields/CoIT_Causa_SIAB__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Causa_SIAB__c</fullName>
    <label>Causa SIAB</label>
    <length>200</length>
    <type>Text</type>
</CustomField>