force-app/main/default/objects/Case/fields/CoIT_Click_Severity__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Click_Severity__c</fullName>
    <label>Severidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bajo Impacto: 0 - 1 día</fullName>
            </value>
            <value>
                <fullName>Bajo Impacto: 0 - 3 días</fullName>
            </value>
            <value>
                <fullName>Bajo Impacto: 0 - 5 días</fullName>
            </value>
            <value>
                <fullName>Moderado: 6 - 19 días</fullName>
            </value>
            <value>
                <fullName>Alto Impacto: 20 o más días</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>