force-app/main/default/objects/Case/fields/CoIT_CLV__c.field-meta.xml
<CustomField>
    <fullName>CoIT_CLV__c</fullName>
    <label>CLV - Cliente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>