force-app/main/default/objects/Case/fields/CoIT_Cobertura_360__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Cobertura_360__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobertura 360</label>
    <type>Checkbox</type>
</CustomField>