force-app/main/default/objects/Case/fields/CoIT_Codigo_Causa__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Codigo_Causa__c</fullName>
    <label>Codigo Causa</label>
    <length>5</length>
    <type>Text</type>
</CustomField>