force-app/main/default/objects/Case/fields/CoIT_Codigo_del_Producto__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Codigo_del_Producto__c</fullName>
    <label>Código del Producto</label>
    <length>5</length>
    <type>Text</type>
</CustomField>