force-app/main/default/objects/Case/fields/CoIT_Codigo_del_Ramo__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Codigo_del_Ramo__c</fullName>
    <label>Código del Ramo</label>
    <length>4</length>
    <type>Text</type>
</CustomField>