force-app/main/default/objects/Case/fields/CoIT_Codigo_Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Codigo_Ubicacion__c</fullName>
    <label>Código Ubicación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>