force-app/main/default/objects/Case/fields/CoIT_Color__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Color__c</fullName>
    <label>Color (Aplica Autos)</label>
    <length>64</length>
    <type>Text</type>
</CustomField>