force-app/main/default/objects/Case/fields/CoIT_Contact_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Contact_Other_Phone__c</fullName>
    <formula>Contact.OtherPhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono Contacto</label>
    <type>Text</type>
</CustomField>