force-app/main/default/objects/Case/fields/CoIT_Correo_Tomador__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Correo_Tomador__c</fullName>
    <label>Correo Tomador</label>
    <length>200</length>
    <type>Text</type>
</CustomField>