force-app/main/default/objects/Case/fields/CoIT_Documento_Tomador__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Documento_Tomador__c</fullName>
    <label>Documento Tomador</label>
    <length>27</length>
    <type>Text</type>
</CustomField>