force-app/main/default/objects/Case/fields/CoIT_Estado_de_la_Llamada__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Estado_de_la_Llamada__c</fullName>
    <label>Estado de la Llamada</label>
    <length>20</length>
    <type>Text</type>
</CustomField>