force-app/main/default/objects/Case/fields/CoIT_Impacto__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Impacto__c</fullName>
    <label>Impacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Bajo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>