force-app/main/default/objects/Case/fields/CoIT_Is_info_from_click__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Is_info_from_click__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is info from click?</label>
    <type>Checkbox</type>
</CustomField>