force-app/main/default/objects/Case/fields/CoIT_Linea_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Linea_de_Negocio__c</fullName>
    <label>Línea de Negocio</label>
    <length>128</length>
    <type>Text</type>
</CustomField>