force-app/main/default/objects/Case/fields/CoIT_Management_Type__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Management_Type__c</fullName>
    <label>Management Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gestión Automatica</fullName>
                <default>true</default>
                <label>Gestión Automatica</label>
            </value>
            <value>
                <fullName>Agendamiento</fullName>
            </value>
            <value>
                <fullName>Alertamientos</fullName>
            </value>
            <value>
                <fullName>Alto impacto</fullName>
            </value>
            <value>
                <fullName>Bajo/medio impacto</fullName>
            </value>
            <value>
                <fullName>Fallido Completado</fullName>
            </value>
            <value>
                <fullName>Gestión Automatica PoC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>