force-app/main/default/objects/Case/fields/CoIT_Modelo_Automovil__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Modelo_Automovil__c</fullName>
    <label>Modelo Automovil</label>
    <length>64</length>
    <type>Text</type>
</CustomField>