force-app/main/default/objects/Case/fields/CoIT_Motivo_de_la_solicitud_del_servicio__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Motivo_de_la_solicitud_del_servicio__c</fullName>
    <label>Motivo de la solicitud del servicio</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>