force-app/main/default/objects/Case/fields/CoIT_Motivo_No_Prestacion_Del_Servicio__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Motivo_No_Prestacion_Del_Servicio__c</fullName>
    <label>Motivo No Prestación Del Servicio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>