force-app/main/default/objects/Case/fields/CoIT_Nombre_de_quien_entrega__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Nombre_de_quien_entrega__c</fullName>
    <label>Nombre de quien entrega</label>
    <length>64</length>
    <type>Text</type>
</CustomField>