force-app/main/default/objects/Case/fields/CoIT_Nombre_del_Continente__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Nombre_del_Continente__c</fullName>
    <label>Nombre del Continente</label>
    <length>60</length>
    <type>Text</type>
</CustomField>