force-app/main/default/objects/Case/fields/CoIT_Nombre_del_Distrito__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Nombre_del_Distrito__c</fullName>
    <label>Nombre del Distrito</label>
    <length>60</length>
    <type>Text</type>
</CustomField>