force-app/main/default/objects/Case/fields/CoIT_Nombre_Regi_n__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Nombre_Regi_n__c</fullName>
    <label>Nombre Región</label>
    <length>64</length>
    <type>Text</type>
</CustomField>