force-app/main/default/objects/Case/fields/CoIT_Nombre_Tomador__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Nombre_Tomador__c</fullName>
    <label>Nombre Tomador</label>
    <length>200</length>
    <type>Text</type>
</CustomField>