force-app/main/default/objects/Case/fields/CoIT_Nombre_Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Nombre_Ubicacion__c</fullName>
    <label>Nombre Ubicación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bogota</fullName>
                <label>BOGOTA</label>
            </value>
            <value>
                <fullName>Santa Marta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>