force-app/main/default/objects/Case/fields/CoIT_Number_Click__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Number_Click__c</fullName>
    <label>Number Click</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>