force-app/main/default/objects/Case/fields/CoIT_Numero_Caso_Click__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_Caso_Click__c</fullName>
    <formula>CoIT_SFS_Interaction_Click__r.CoIT_Source_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero Autorización</label>
    <type>Text</type>
</CustomField>