force-app/main/default/objects/Case/fields/CoIT_Numero_Caso_SIAB_del__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_Caso_SIAB_del__c</fullName>
    <formula>CoIT_SFS_Interaction_Click__r.CoIT_Numero_Caso_SIAB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número Caso SIAB</label>
    <type>Text</type>
</CustomField>