force-app/main/default/objects/Case/fields/CoIT_Numero_de_la_Poliza__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_de_la_Poliza__c</fullName>
    <label>Número de la Póliza</label>
    <length>20</length>
    <type>Text</type>
</CustomField>