force-app/main/default/objects/Case/fields/CoIT_Numero_de_Placa__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_de_Placa__c</fullName>
    <label>Numero de Placa</label>
    <length>64</length>
    <type>Text</type>
</CustomField>