force-app/main/default/objects/Case/fields/CoIT_Numero_del_Siniestro__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_del_Siniestro__c</fullName>
    <externalId>true</externalId>
    <label>Número del Siniestro</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>