force-app/main/default/objects/Case/fields/CoIT_Observaciones__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Observaciones__c</fullName>
    <label>Observaciones</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>