force-app/main/default/objects/Case/fields/CoIT_On_Queue__c.field-meta.xml
<CustomField>
    <fullName>CoIT_On_Queue__c</fullName>
    <formula>IF( ISBLANK(Owner:Queue.Id), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Queue</label>
    <type>Checkbox</type>
</CustomField>