force-app/main/default/objects/Case/fields/CoIT_Opcion_de_Cobertura__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Opcion_de_Cobertura__c</fullName>
    <label>Opción de Cobertura</label>
    <length>50</length>
    <type>Text</type>
</CustomField>