force-app/main/default/objects/Case/fields/CoIT_Origen__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Origen__c</fullName>
    <label>Canal de solicitud</label>
    <length>50</length>
    <type>Text</type>
</CustomField>