force-app/main/default/objects/Case/fields/CoIT_Producto_Bolivar__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Producto_Bolivar__c</fullName>
    <label>Producto Bolivar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - INCENDIO TRADICIONAL</fullName>
            </value>
            <value>
                <fullName>100 - ASISTENCIA HOGAR</fullName>
            </value>
            <value>
                <fullName>109 - HOGAR PARA DISFRUTAR</fullName>
            </value>
            <value>
                <fullName>11 - TRADICIONAL EMPRESAR</fullName>
            </value>
            <value>
                <fullName>1111 - ASISTENCIA</fullName>
            </value>
            <value>
                <fullName>112 - MIGRACION HOGAR</fullName>
            </value>
            <value>
                <fullName>115 - HOGAR BANCARIO</fullName>
            </value>
            <value>
                <fullName>117 - HOGAR  PARA DISFRUTAR FUNCIONARIOS</fullName>
            </value>
            <value>
                <fullName>121 - HOGAR MULTICOMPA?IA</fullName>
            </value>
            <value>
                <fullName>125 - HOGAR VIVIR Y DISFRUTAR</fullName>
            </value>
            <value>
                <fullName>127 - HOGAR EL LIBERTADOR</fullName>
            </value>
            <value>
                <fullName>129 - HOGAR MODULAR</fullName>
            </value>
            <value>
                <fullName>140 - TODO RIESGO PARA CONSTRUCCION</fullName>
            </value>
            <value>
                <fullName>150 - TODO RIESGO CONSTRUCCION</fullName>
            </value>
            <value>
                <fullName>152 - EQUIPO Y MAQUINARIA</fullName>
            </value>
            <value>
                <fullName>173 - MULTIRIESGO PYMES</fullName>
            </value>
            <value>
                <fullName>200 - GARANTIAS CONSTRUCTORA BOLIVAR</fullName>
            </value>
            <value>
                <fullName>220 - ASISTENCIA HOGAR DIGITAL</fullName>
            </value>
            <value>
                <fullName>339 - HOGAR PROTECCION TOTAL</fullName>
            </value>
            <value>
                <fullName>600 - SEGURO AGRICOLA</fullName>
            </value>
            <value>
                <fullName>73 - HIPOTECARIOS COLPATRIA</fullName>
            </value>
            <value>
                <fullName>74 - CREDITOS HIPOTECARIOS</fullName>
            </value>
            <value>
                <fullName>75 - HIPOTECARIOS DAVIVIENDA</fullName>
            </value>
            <value>
                <fullName>76 - ALL RISK</fullName>
            </value>
            <value>
                <fullName>777 - E-PYMES</fullName>
            </value>
            <value>
                <fullName>799 - EDUCADORES PLUS</fullName>
            </value>
            <value>
                <fullName>8 - ROTURA DE MAQUINARIA</fullName>
            </value>
            <value>
                <fullName>923 - OFERTAS DE PROTECCION</fullName>
            </value>
            <value>
                <fullName>93 - MIDAS PLAN INDUSTRIAL</fullName>
            </value>
            <value>
                <fullName>94 - MULTIRIESGO PANIFICADORAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>