force-app/main/default/objects/Case/fields/CoIT_Producto_SIAB__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Producto_SIAB__c</fullName>
    <label>Producto SIAB</label>
    <length>200</length>
    <type>Text</type>
</CustomField>