force-app/main/default/objects/Case/fields/CoIT_Proveedor_ID__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Proveedor_ID__c</fullName>
    <label>Proveedor ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>