force-app/main/default/objects/Case/fields/CoIT_Ramo_SIAB__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Ramo_SIAB__c</fullName>
    <description>Recibe la descripcion del ramo desde SIAB</description>
    <label>Ramo SIAB</label>
    <length>200</length>
    <type>Text</type>
</CustomField>