force-app/main/default/objects/Case/fields/CoIT_Realizo_Llamada_a_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Realizo_Llamada_a_Tecnico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Realizó Llamada a Técnico?</label>
    <type>Checkbox</type>
</CustomField>