force-app/main/default/objects/Case/fields/CoIT_Riesgo__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Riesgo__c</fullName>
    <label>Riesgo-Placa</label>
    <length>80</length>
    <type>Text</type>
</CustomField>