force-app/main/default/objects/Case/fields/CoIT_SFS_Interaction_Click__c.field-meta.xml
<CustomField>
    <fullName>CoIT_SFS_Interaction_Click__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFS Interaction Click</label>
    <referenceTo>SFS_Interaction_Click__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>