force-app/main/default/objects/Case/fields/CoIT_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Tecnico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Técnico</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Proveedor)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>