force-app/main/default/objects/Case/fields/CoIT_Telefono_Tomador__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Telefono_Tomador__c</fullName>
    <label>Telefono Tomador</label>
    <length>10</length>
    <type>Text</type>
</CustomField>