force-app/main/default/objects/Case/fields/CoIT_Tipo_de_Asistencia__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Tipo_de_Asistencia__c</fullName>
    <label>Tipo de Asistencia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>