force-app/main/default/objects/Case/fields/CoIT_Type_of_Task_to_be_Performed__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Type_of_Task_to_be_Performed__c</fullName>
    <label>Tipo De Tarea a Realizar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>