force-app/main/default/objects/Case/fields/CoIT_Verifco_Urgencia_Poliza__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Verifco_Urgencia_Poliza__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verifcó Urgencia Póliza?</label>
    <type>Checkbox</type>
</CustomField>