force-app/main/default/objects/Case/fields/CoIT_Was_Created_by_Integration__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Was_Created_by_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Created by Integration</label>
    <type>Checkbox</type>
</CustomField>