force-app/main/default/objects/Case/fields/CoIT_Wo_Diagnostico_creada__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Wo_Diagnostico_creada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wo-Diagnostico creada?</label>
    <type>Checkbox</type>
</CustomField>