force-app/main/default/objects/Case/fields/CoIT_WO_Directa_creada__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WO_Directa_creada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WO-Directa creada?</label>
    <type>Checkbox</type>
</CustomField>