force-app/main/default/objects/Case/fields/Estado_Razon__c.field-meta.xml
<CustomField>
    <fullName>Estado_Razon__c</fullName>
    <label>Estado Razón</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No asignado</fullName>
            </value>
            <value>
                <fullName>Asignado</fullName>
            </value>
            <value>
                <fullName>En espera del cliente</fullName>
            </value>
            <value>
                <fullName>En espera del tercero</fullName>
            </value>
            <value>
                <fullName>Asignado a area interna</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
            <value>
                <fullName>Gestionado</fullName>
            </value>
            <value>
                <fullName>No cobertura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>