force-app/main/default/objects/Case/fields/Numero_Caso_SIAB_2__c.field-meta.xml
<CustomField>
    <fullName>Numero_Caso_SIAB_2__c</fullName>
    <label>Numero Caso SIAB 2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>