force-app/main/default/objects/Case/fields/Numero_de_autorizacion_2__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_autorizacion_2__c</fullName>
    <label>Numero de autorizacion</label>
    <length>150</length>
    <type>Text</type>
</CustomField>