force-app/main/default/objects/Case/fields/Numero_de_autorizacion__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_autorizacion__c</fullName>
    <label>Numero de autorizacion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>