force-app/main/default/objects/Case/fields/Razon_Estado__c.field-meta.xml
<CustomField>
    <fullName>Razon_Estado__c</fullName>
    <label>Razon Estado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Estado_Razon__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONTACTABILIDAD ASG</fullName>
            </value>
            <value>
                <fullName>DISPONIBILIDAD ASG</fullName>
            </value>
            <value>
                <fullName>REPARACIONES DEL ASG</fullName>
            </value>
            <value>
                <fullName>PENDIENTE PAGO DEDUCIBLE</fullName>
            </value>
            <value>
                <fullName>PENDIENTE TOMA FACTURABLE</fullName>
            </value>
            <value>
                <fullName>REPARACION ADMON</fullName>
            </value>
            <value>
                <fullName>REPARACIONES DEL RC</fullName>
            </value>
            <value>
                <fullName>DISPONIBILIDAD RC</fullName>
            </value>
            <value>
                <fullName>ASIGNADO A AJUSTADOR</fullName>
            </value>
            <value>
                <fullName>ASIGNADO A UIFA</fullName>
            </value>
            <value>
                <fullName>Casos cerrados</fullName>
            </value>
            <value>
                <fullName>Libertador</fullName>
            </value>
            <value>
                <fullName>Caso gestionado por otro gestor/supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>