force-app/main/default/objects/Case/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No asignado</fullName>
            </value>
            <value>
                <fullName>Asignado</fullName>
            </value>
            <value>
                <fullName>En espera del cliente</fullName>
            </value>
            <value>
                <fullName>En espera de terceros</fullName>
            </value>
            <value>
                <fullName>Asignado a área interna</fullName>
            </value>
            <value>
                <fullName>Gestionado</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
            <value>
                <fullName>No cobertura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>