force-app/main/default/objects/Case/fields/Tipo_de_tarea_a_realizar__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_tarea_a_realizar__c</fullName>
    <label>Tipo de tarea a realizar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>