force-app/main/default/objects/Case/recordTypes/Autos.recordType-meta.xml
<RecordType>
    <fullName>Autos</fullName>
    <active>true</active>
    <businessProcess>inov8__PMT</businessProcess>
    <label>Autos</label>
</RecordType>