force-app/main/default/objects/Case/recordTypes/Hogares.recordType-meta.xml
<RecordType>
    <fullName>Hogares</fullName>
    <active>true</active>
    <businessProcess>inov8__PMT</businessProcess>
    <label>Hogares</label>
</RecordType>