force-app/main/default/objects/Case/validationRules/Change_Numero_de_siniestro.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Numero_de_siniestro</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(CoIT_Numero_del_Siniestro__c),
  OR(
    $Profile.Name = &quot;CoIT Bolivar Manager Profile&quot;,
    $Profile.Name = &quot;CoIT Bolivar Leader Profile&quot;
  )
)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el numero de siniestro.</errorMessage>
</ValidationRule>