force-app/main/default/objects/Case/validationRules/Change_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Record_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

$Profile.Name=&quot; CoIT Bolivar Manager Profile&quot;,

ISCHANGED(RecordTypeId)

)</errorConditionFormula>
    <errorMessage>Permisos insuficientes</errorMessage>
</ValidationRule>