force-app/main/default/objects/Case/validationRules/Change_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Status</fullName>
    <active>true</active>
    <description>Manager y supervisor no puede cambiar estados del caso cuando son hogar o autos.</description>
    <errorConditionFormula>AND(
  ISCHANGED(Status),
  OR(
    $Profile.Name = &quot;CoIT Bolivar Manager Profile&quot;,
    $Profile.Name = &quot;CoIT Bolivar Leader Profile&quot;
  ),
  OR(
    $RecordType.Name = &quot;HOGARES&quot;,
    $RecordType.Name = &quot;AUTOS&quot;
  )
)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el estado del caso</errorMessage>
</ValidationRule>