force-app/main/default/objects/Case/validationRules/Restrict_Change_OwnerId.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Change_OwnerId</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

$Profile.Name=&quot;	CoIT Bolivar Manager Profile&quot;,

ISCHANGED( OwnerId )

)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Permisos Insuficientes</errorMessage>
</ValidationRule>