force-app/main/default/objects/Case/listViews/Agendamiento_Case.listView-meta.xml
<ListView>
    <fullName>Agendamiento_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Agendamiento</label>
    <queue>Agendamiento</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>