force-app/main/default/objects/Case/listViews/Alertamiento.listView-meta.xml
<ListView>
    <fullName>Alertamiento</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Alertamiento</label>
    <queue>Alertamientos</queue>
</ListView>