force-app/main/default/objects/Case/listViews/CoIT_High_Impact_Agents_Case.listView-meta.xml
<ListView>
    <fullName>CoIT_High_Impact_Agents_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Cola: Agentes – Alto impacto</label>
    <queue>CoIT_High_Impact_Agents</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>