force-app/main/default/objects/Case/listViews/CoIT_Low_Medium_Impact_Agents_Case.listView-meta.xml
<ListView>
    <fullName>CoIT_Low_Medium_Impact_Agents_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Cola: Agentes – Bajo/medio impacto</label>
    <queue>CoIT_Low_Medium_Impact_Agents</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>