force-app/main/default/objects/Case/listViews/Gestion_Automatica_Case.listView-meta.xml
<ListView>
    <fullName>Gestion_Automatica_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Gestión Automatica</label>
    <queue>Gestion_Automatica</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>