force-app/main/default/objects/Case/listViews/inov8__My_Open_Project_Cases.listView-meta.xml
<ListView>
    <fullName>inov8__My_Open_Project_Cases</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Mine</filterScope>
    <label>Mis casos de proyectos abiertos</label>
</ListView>