force-app/main/default/objects/Case/listViews/MyOpenCases.listView-meta.xml
<ListView>
    <fullName>MyOpenCases</fullName>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CoIT_Numero_del_Siniestro__c</columns>
    <columns>CoIT_Nombre_Tomador__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Estado_Razon__c</columns>
    <columns>Razon_Estado__c</columns>
    <columns>Status_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mis Casos Abiertos</label>
</ListView>